# wasm-minimal

./: .jiu.toml  Cargo.toml  LICENSE  README.md  index.html  index.js
.github/workflows/: release.yml
scripts/: version.sh
src/: lib.rs  main.rs
template/: .jiu.toml  Cargo.toml  README.md  cargo-generate.toml  index.js
template/tests/: integration_test.rs
tests/: integration_test.rs
