[package]
name = "rust-wasm-test-2025"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Test"
keywords = []
categories = []
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/rust-wasm-test-2025"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
wasm-bindgen = "0.2.104"
web-sys = "0.3.81"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-wasm-test-2025"

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
