[package]
name = "rust-wasm-test-2025"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Test"
keywords = []
categories = []
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/rust-wasm-test-2025"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
wasm-bindgen = "0.2.104"

[dependencies.web-sys]
version = "0.3.81"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib", "rlib"]
