[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "{{project-description}}"
keywords = []
categories = []
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/{{username}}/{{project-name}}"
license = "MIT"
authors = ["{{username}}"]

[dependencies]
wasm-bindgen = "0.2.104"

[dependencies.web-sys]
version = "0.3.81"
features = ["Document", "Element", "HtmlElement", "Node", "Window"]

[lib]
crate-type = ["cdylib", "rlib"]
